--- a/flask-practice/pyproject.toml
+++ b/flask-practice/pyproject.toml
@@ -9,3 +9,8 @@ dependencies = [
     "flask-migrate>=4.1.0",
     "flask-sqlalchemy>=3.1.1",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
